AI Voice Assitant Feature

--- a/maintenanceservice/src/main/resources/application.properties
+++ b/maintenanceservice/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 server.port=8082
 
-
 spring.application.name=maintenance-service
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/homegenie_maintenance
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=YOUR_POSTGRES_PASSWORD
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -16,26 +15,40 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-
 email.provider=smtp
 
 # SMTP Settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=YOUR_EMAIL
-spring.mail.password=YOUR_GMAIL_PASS
+spring.mail.username=YOUR_SMTP_USERNAME
+spring.mail.password=YOUR_SMTP_PASSWORD
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-aws.access-key=YOUR_ACCESS_KEY
-aws.secret-key=YOUR_SECURITY_KEY
+aws.access-key=YOUR_AWS_ACCESS_KEY
+aws.secret-key=YOUR_AWS_SECRET_KEY
 aws.region=us-east-1
-aws.ses.from-email=YOUR_EMAIL
+aws.ses.from-email=no-reply@homegenie.com
 aws.s3.bucket-name=homegenie-uploads-tushar
 
-huggingface.api.token=YOUR_TOKEN
+huggingface.api.token=YOUR_HUGGINGFACE_API_TOKEN
 
 logging.level.com.homegenie=DEBUG
 
-admin.email=tusharseth80@gmail.com
+admin.email=YOUR_ADMIN_EMAIL
 user.service.url=http://localhost:8081
+
+
+voice.service.url=http://localhost:8000
+
+voice.assistant.enabled=true
+voice.assistant.timeout=30000
+voice.assistant.max-retries=3
+
+
+ai.provider=gemini
+ai.gemini.key=${GEMINI_API_KEY:}
+
+voice.features.auto-classification=true
+voice.features.emergency-detection=true
+voice.features.context-aware=true
