--- a/maintenanceservice/src/main/resources/application.properties
+++ b/maintenanceservice/src/main/resources/application.properties
@@ -52,3 +52,6 @@ ai.gemini.key=${GEMINI_API_KEY:}
 voice.features.auto-classification=true
 voice.features.emergency-detection=true
 voice.features.context-aware=true
+
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.prometheus.enabled=true
