--- a/maintenanceservice/python-voice-service/requirements.txt
+++ b/maintenanceservice/python-voice-service/requirements.txt
@@ -9,3 +9,8 @@ requests==2.31.0
 google-generativeai==0.3.1
 pydub==0.25.1
 PyAudio==0.2.14
+
+# Testing dependencies
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
