feat: Implement core microservices architecture including user, notification, maintenance, API Gateway, and Python voice services with Docker and RabbitMQ integration.

--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -4,26 +4,24 @@ server:
 spring:
   application:
     name: user-service
-
   datasource:
-    url: jdbc:postgresql://localhost:5432/homegenie_users
-    username: postgres
-    password: 12345678
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/homegenie_users}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
 
 jwt:
-  secret: 
-  expiration: 86400000
+  secret: ${JWT_SECRET:homegenie-secret-key-change-in-production-minimum-32-chars}
+  expiration: ${JWT_EXPIRATION:86400000}
 
 logging:
   level:
+    root: INFO
     com.homegenie: DEBUG
