initial microservice architecture and React frontend with authentication, routing, and role-based dashboards.

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,11 +1,9 @@
-FROM eclipse-temurin:17-jdk-alpine AS build
+FROM maven:3.9-eclipse-temurin-17-alpine AS build
 WORKDIR /app
 COPY pom.xml .
-COPY .mvn .mvn
-COPY mvnw .
-RUN chmod +x mvnw && ./mvnw dependency:go-offline -B
+RUN mvn dependency:go-offline -B
 COPY src src
-RUN ./mvnw package -DskipTests -B
+RUN mvn package -Dmaven.test.skip=true -B
 
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
