--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  GCP_REGION: ${{ secrets.GCP_REGION }}
+  GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  REPO_NAME: homegenie-repo
+  IMAGE_BASE: ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/homegenie-repo
+
 jobs:
   test-user-service:
     runs-on: ubuntu-latest
@@ -77,30 +83,144 @@ jobs:
       - name: Build
         run: ./mvnw package -DskipTests -B
 
-  build-docker-images:
+  build-and-push:
     needs: [test-user-service, test-maintenance-service, test-notification-service, build-gateway]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Build and Push Images
-        run: |
-          services=("api-gateway" "userservice" "maintenanceservice" "notification-service")
-          for svc in "${services[@]}"; do
-            docker build -t ${{ secrets.DOCKER_USERNAME }}/homegenie-${svc}:latest ./${svc}
-            docker build -t ${{ secrets.DOCKER_USERNAME }}/homegenie-${svc}:${{ github.sha }} ./${svc}
-            docker push ${{ secrets.DOCKER_USERNAME }}/homegenie-${svc}:latest
-            docker push ${{ secrets.DOCKER_USERNAME }}/homegenie-${svc}:${{ github.sha }}
-          done
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
 
-      - name: Build and Push Voice Service
+      - name: Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker ${{ env.GCP_REGION }}-docker.pkg.dev --quiet
+
+      - name: Build & Push user-service
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/homegenie-voice-service:latest ./python-voice-service
-          docker push ${{ secrets.DOCKER_USERNAME }}/homegenie-voice-service:latest
+          docker build -t ${{ env.IMAGE_BASE }}/user-service:latest -t ${{ env.IMAGE_BASE }}/user-service:${{ github.sha }} ./userservice
+          docker push ${{ env.IMAGE_BASE }}/user-service:latest
+          docker push ${{ env.IMAGE_BASE }}/user-service:${{ github.sha }}
+
+      - name: Build & Push maintenance-service
+        run: |
+          docker build -t ${{ env.IMAGE_BASE }}/maintenance-service:latest -t ${{ env.IMAGE_BASE }}/maintenance-service:${{ github.sha }} ./maintenanceservice
+          docker push ${{ env.IMAGE_BASE }}/maintenance-service:latest
+          docker push ${{ env.IMAGE_BASE }}/maintenance-service:${{ github.sha }}
+
+      - name: Build & Push notification-service
+        run: |
+          docker build -t ${{ env.IMAGE_BASE }}/notification-service:latest -t ${{ env.IMAGE_BASE }}/notification-service:${{ github.sha }} ./notification-service
+          docker push ${{ env.IMAGE_BASE }}/notification-service:latest
+          docker push ${{ env.IMAGE_BASE }}/notification-service:${{ github.sha }}
+
+      - name: Build & Push voice-service
+        run: |
+          docker build -t ${{ env.IMAGE_BASE }}/voice-service:latest -t ${{ env.IMAGE_BASE }}/voice-service:${{ github.sha }} ./python-voice-service
+          docker push ${{ env.IMAGE_BASE }}/voice-service:latest
+          docker push ${{ env.IMAGE_BASE }}/voice-service:${{ github.sha }}
+
+      - name: Build & Push api-gateway
+        run: |
+          docker build -t ${{ env.IMAGE_BASE }}/api-gateway:latest -t ${{ env.IMAGE_BASE }}/api-gateway:${{ github.sha }} ./api-gateway
+          docker push ${{ env.IMAGE_BASE }}/api-gateway:latest
+          docker push ${{ env.IMAGE_BASE }}/api-gateway:${{ github.sha }}
+
+  deploy-backend-services:
+    needs: [build-and-push]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Deploy user-service to Cloud Run
+        run: |
+          gcloud run deploy user-service \
+            --image=${{ env.IMAGE_BASE }}/user-service:${{ github.sha }} \
+            --region=${{ env.GCP_REGION }} \
+            --platform=managed \
+            --allow-unauthenticated \
+            --add-cloudsql-instances=${{ secrets.CLOUD_SQL_INSTANCE }} \
+            --set-env-vars="SPRING_PROFILES_ACTIVE=prod,CLOUD_SQL_ENABLED=true,CLOUD_SQL_INSTANCE=${{ secrets.CLOUD_SQL_INSTANCE }},CLOUD_SQL_DB=homegenie_users,DB_USERNAME=${{ secrets.DB_USERNAME }},DB_PASSWORD=${{ secrets.DB_PASSWORD }},JWT_SECRET=${{ secrets.JWT_SECRET }}" \
+            --quiet
+
+      - name: Deploy maintenance-service to Cloud Run
+        run: |
+          gcloud run deploy maintenance-service \
+            --image=${{ env.IMAGE_BASE }}/maintenance-service:${{ github.sha }} \
+            --region=${{ env.GCP_REGION }} \
+            --platform=managed \
+            --allow-unauthenticated \
+            --add-cloudsql-instances=${{ secrets.CLOUD_SQL_INSTANCE }} \
+            --set-env-vars="SPRING_PROFILES_ACTIVE=prod,CLOUD_SQL_ENABLED=true,CLOUD_SQL_INSTANCE=${{ secrets.CLOUD_SQL_INSTANCE }},CLOUD_SQL_DB=homegenie_maintenance,DB_USERNAME=${{ secrets.DB_USERNAME }},DB_PASSWORD=${{ secrets.DB_PASSWORD }},GCP_STORAGE_BUCKET=${{ secrets.GCP_STORAGE_BUCKET }}" \
+            --quiet
+
+      - name: Deploy notification-service to Cloud Run
+        run: |
+          gcloud run deploy notification-service \
+            --image=${{ env.IMAGE_BASE }}/notification-service:${{ github.sha }} \
+            --region=${{ env.GCP_REGION }} \
+            --platform=managed \
+            --allow-unauthenticated \
+            --set-env-vars="SPRING_PROFILES_ACTIVE=prod" \
+            --quiet
+
+      - name: Deploy voice-service to Cloud Run
+        run: |
+          gcloud run deploy voice-service \
+            --image=${{ env.IMAGE_BASE }}/voice-service:${{ github.sha }} \
+            --region=${{ env.GCP_REGION }} \
+            --platform=managed \
+            --allow-unauthenticated \
+            --set-env-vars="GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" \
+            --quiet
+
+  deploy-api-gateway:
+    needs: [deploy-backend-services]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Get Service URLs & Deploy API Gateway
+        run: |
+          USER_URL=$(gcloud run services describe user-service --region=${{ env.GCP_REGION }} --format='value(status.url)')
+          MAINT_URL=$(gcloud run services describe maintenance-service --region=${{ env.GCP_REGION }} --format='value(status.url)')
+          VOICE_URL=$(gcloud run services describe voice-service --region=${{ env.GCP_REGION }} --format='value(status.url)')
+          NOTIF_URL=$(gcloud run services describe notification-service --region=${{ env.GCP_REGION }} --format='value(status.url)')
+
+          echo "User Service:         $USER_URL"
+          echo "Maintenance Service:  $MAINT_URL"
+          echo "Voice Service:        $VOICE_URL"
+          echo "Notification Service: $NOTIF_URL"
+
+          gcloud run deploy api-gateway \
+            --image=${{ env.IMAGE_BASE }}/api-gateway:${{ github.sha }} \
+            --region=${{ env.GCP_REGION }} \
+            --platform=managed \
+            --allow-unauthenticated \
+            --set-env-vars="USER_SERVICE_URL=${USER_URL},MAINTENANCE_SERVICE_URL=${MAINT_URL},VOICE_SERVICE_URL=${VOICE_URL},NOTIFICATION_SERVICE_URL=${NOTIF_URL},CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }},JWT_SECRET=${{ secrets.JWT_SECRET }}" \
+            --quiet
+
+      - name: Print API Gateway URL
+        run: |
+          GATEWAY_URL=$(gcloud run services describe api-gateway --region=${{ env.GCP_REGION }} --format='value(status.url)')
+          echo "============================================"
+          echo "🎉 Deployment Complete!"
+          echo "🌐 API Gateway URL: $GATEWAY_URL"
+          echo "============================================"
