--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,8 +3,18 @@ name: HomeGenie CI/CD
 on:
   push:
     branches: [main, develop]
+    paths-ignore:
+      - 'homegenie-app/**'
+      - 'README.md'
+      - 'Readme.md'
+      - '**.md'
   pull_request:
     branches: [main]
+    paths-ignore:
+      - 'homegenie-app/**'
+      - 'README.md'
+      - 'Readme.md'
+      - '**.md'
 
 env:
   GCP_REGION: ${{ secrets.GCP_REGION }}
