--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -228,7 +228,7 @@ jobs:
             --region=${{ env.GCP_REGION }} \
             --platform=managed \
             --allow-unauthenticated \
-            --set-env-vars="USER_SERVICE_URL=${USER_URL},MAINTENANCE_SERVICE_URL=${MAINT_URL},VOICE_SERVICE_URL=${VOICE_URL},NOTIFICATION_SERVICE_URL=${NOTIF_URL},CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }},JWT_SECRET=${{ secrets.JWT_SECRET }}" \
+            --set-env-vars="USER_SERVICE_URL=${USER_URL},MAINTENANCE_SERVICE_URL=${MAINT_URL},VOICE_SERVICE_URL=${VOICE_URL},NOTIFICATION_SERVICE_URL=${NOTIF_URL},CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }},JWT_SECRET=${{ secrets.JWT_SECRET }},REDIS_HOST=${{ secrets.REDIS_HOST }},REDIS_PORT=${{ secrets.REDIS_PORT }},REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }},REDIS_SSL=true" \
             --quiet
 
       - name: Print API Gateway URL
