--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -27,6 +27,15 @@ jwt:
   secret: ${JWT_SECRET:homegenie-secret-key-change-in-production-minimum-32-chars}
   expiration: ${JWT_EXPIRATION:86400000}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: when-authorized
+
 logging:
   level:
     root: INFO
