--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -99,7 +99,7 @@ jobs:
             --add-cloudsql-instances=${{ secrets.CLOUD_SQL_INSTANCE }} \
             --set-env-vars="SPRING_PROFILES_ACTIVE=prod,CLOUD_SQL_ENABLED=true,CLOUD_SQL_INSTANCE=${{ secrets.CLOUD_SQL_INSTANCE }},CLOUD_SQL_DB=homegenie_users,DB_USERNAME=${{ secrets.DB_USERNAME }},DB_PASSWORD=${{ secrets.DB_PASSWORD }},JWT_SECRET=${{ secrets.JWT_SECRET }}" \
             --liveness-probe="httpGet.path=/actuator/health" \
-            --startup-probe="httpGet.path=/actuator/health" \
+            --startup-probe="httpGet.path=/actuator/health,failureThreshold=20,periodSeconds=10" \
             --quiet
 
   maintenance-service:
@@ -279,5 +279,5 @@ jobs:
             --allow-unauthenticated \
             --set-env-vars="USER_SERVICE_URL=${USER_URL},MAINTENANCE_SERVICE_URL=${MAINT_URL},VOICE_SERVICE_URL=${VOICE_URL},NOTIFICATION_SERVICE_URL=${NOTIF_URL},CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }},JWT_SECRET=${{ secrets.JWT_SECRET }},REDIS_HOST=${{ secrets.REDIS_HOST }},REDIS_PORT=${{ secrets.REDIS_PORT }},REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }},REDIS_SSL=true" \
             --liveness-probe="httpGet.path=/actuator/health" \
-            --startup-probe="httpGet.path=/actuator/health" \
+            --startup-probe="httpGet.path=/actuator/health,failureThreshold=30,periodSeconds=10" \
             --quiet
