--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -34,10 +34,14 @@ aws:
     from-email: ${SES_FROM_EMAIL:noreply@homegenie.com}
 
 management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+  health:
+    rabbitmq:
+      enabled: false
+    mail:
+      enabled: false
 
 logging:
   level:
