Bug fix health check updated

--- a/maintenanceservice/src/main/resources/application.yml
+++ b/maintenanceservice/src/main/resources/application.yml
@@ -113,10 +113,12 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics,circuitbreakers
+        include: "*"
   endpoint:
     health:
       show-details: always
+      probes:
+        enabled: true
   health:
     db:
       enabled: false
