--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -34,14 +34,15 @@ aws:
     from-email: ${SES_FROM_EMAIL:noreply@homegenie.com}
 
 management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
   endpoint:
     health:
       show-details: always
-  health:
-    rabbitmq:
-      enabled: false
-    mail:
-      enabled: false
+      probes:
+        enabled: true
 
 logging:
   level:
