--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -98,8 +98,8 @@ jobs:
             --allow-unauthenticated \
             --add-cloudsql-instances=${{ secrets.CLOUD_SQL_INSTANCE }} \
             --set-env-vars="SPRING_PROFILES_ACTIVE=prod,CLOUD_SQL_ENABLED=true,CLOUD_SQL_INSTANCE=${{ secrets.CLOUD_SQL_INSTANCE }},CLOUD_SQL_DB=homegenie_users,DB_USERNAME=${{ secrets.DB_USERNAME }},DB_PASSWORD=${{ secrets.DB_PASSWORD }},JWT_SECRET=${{ secrets.JWT_SECRET }}" \
-            --liveness-probe="httpGet.path=/actuator/health" \
-            --startup-probe="httpGet.path=/actuator/health,failureThreshold=25,periodSeconds=10" \
+            --liveness-probe="httpGet.path=/actuator/health/liveness" \
+            --startup-probe="httpGet.path=/actuator/health/readiness,failureThreshold=25,periodSeconds=10" \
             --quiet
 
   maintenance-service:
@@ -147,8 +147,8 @@ jobs:
             --allow-unauthenticated \
             --add-cloudsql-instances=${{ secrets.CLOUD_SQL_INSTANCE }} \
             --set-env-vars="SPRING_PROFILES_ACTIVE=prod,CLOUD_SQL_ENABLED=true,CLOUD_SQL_INSTANCE=${{ secrets.CLOUD_SQL_INSTANCE }},CLOUD_SQL_DB=homegenie_maintenance,DB_USERNAME=${{ secrets.DB_USERNAME }},DB_PASSWORD=${{ secrets.DB_PASSWORD }},GCP_STORAGE_BUCKET=${{ secrets.GCP_STORAGE_BUCKET }}" \
-            --liveness-probe="httpGet.path=/actuator/health" \
-            --startup-probe="httpGet.path=/actuator/health,failureThreshold=25,periodSeconds=10" \
+            --liveness-probe="httpGet.path=/actuator/health/liveness" \
+            --startup-probe="httpGet.path=/actuator/health/readiness,failureThreshold=30,periodSeconds=10" \
             --quiet
 
   notification-service:
@@ -193,8 +193,8 @@ jobs:
             --platform=managed \
             --allow-unauthenticated \
             --set-env-vars="SPRING_PROFILES_ACTIVE=prod" \
-            --liveness-probe="httpGet.path=/actuator/health" \
-            --startup-probe="httpGet.path=/actuator/health,failureThreshold=25,periodSeconds=10" \
+            --liveness-probe="httpGet.path=/actuator/health/liveness" \
+            --startup-probe="httpGet.path=/actuator/health/readiness,failureThreshold=25,periodSeconds=10" \
             --quiet
 
   voice-service:
@@ -278,6 +278,6 @@ jobs:
             --platform=managed \
             --allow-unauthenticated \
             --set-env-vars="USER_SERVICE_URL=${USER_URL},MAINTENANCE_SERVICE_URL=${MAINT_URL},VOICE_SERVICE_URL=${VOICE_URL},NOTIFICATION_SERVICE_URL=${NOTIF_URL},CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }},JWT_SECRET=${{ secrets.JWT_SECRET }},REDIS_HOST=${{ secrets.REDIS_HOST }},REDIS_PORT=${{ secrets.REDIS_PORT }},REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }},REDIS_SSL=true" \
-            --liveness-probe="httpGet.path=/actuator/health" \
-            --startup-probe="httpGet.path=/actuator/health,failureThreshold=30,periodSeconds=10" \
+            --liveness-probe="httpGet.path=/actuator/health/liveness" \
+            --startup-probe="httpGet.path=/actuator/health/readiness,failureThreshold=30,periodSeconds=10" \
             --quiet
