Rabbit MQ config changes

--- a/maintenanceservice/src/main/resources/application-prod.yml
+++ b/maintenanceservice/src/main/resources/application-prod.yml
@@ -16,10 +16,13 @@ spring:
       ssl:
         enabled: ${REDIS_SSL:false}
   rabbitmq:
+    addresses: ${RABBITMQ_URL:}
     host: ${RABBITMQ_HOST}
     port: ${RABBITMQ_PORT:5672}
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PASSWORD}
+    ssl:
+      enabled: ${RABBITMQ_SSL:false}
 
 logging:
   level:
