Smtp configuration added

--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -21,8 +21,12 @@ spring:
       mail:
         smtp:
           auth: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
           starttls:
             enable: true
+            required: true
 
 email:
   provider: ${EMAIL_PROVIDER:smtp}
